add_subdirectory(01_OpenGL_Triangle)
add_subdirectory(02_OpenGL_Texture)
add_subdirectory(03_OpenGL_3D_Space)
add_subdirectory(04_OpenGL_Light)
add_subdirectory(05_OpenGL_Advanced_Light)
add_subdirectory(06_OpenGL_Model_Loading)
add_subdirectory(07_OpenGL_Advanced_GL)
add_subdirectory(08_OpenGL_Advanced_Rendering)
add_subdirectory(09_OpenGL_Advanced_Lighting2)
add_subdirectory(10_OpenGL_PBR)
